--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@babel/core": "^7.1.0",
     "axios": "^0.18.0",
     "cross-env": "^5.2.0",
+    "lingallery": "^1.3.0",
     "node-sass": "^4.11.0",
     "sass-loader": "^7.1.0",
     "vue": "^2.5.17",
