--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
     "@babel/core": "^7.1.0",
     "axios": "^0.18.0",
     "cross-env": "^5.2.0",
+    "hooper": "^0.3.4",
     "node-sass": "^4.11.0",
     "sass-loader": "^7.1.0",
     "vue": "^2.5.17",
-    "vue-carousel": "^0.18.0",
+    "vue-agile": "^1.0.11",
     "vue-loader": "^15.4.2",
     "vue-router": "^3.0.1",
     "webpack-merge": "^4.1.4"
